--- a/src/components/blog/LatestPosts.astro
+++ b/src/components/blog/LatestPosts.astro
@@ -1,15 +1,11 @@
 ---
-import { getCollection } from "astro:content";
+import { getPosts } from "../../cms/cmsBase";
 import Post from "./Post.astro";
 import config from "../../config.mjs";
 
 const { postLimit = config.latestPosts, skipPost = "" } = Astro.props;
 
-const posts = (await getCollection('blog', ({ data }) => {
-    return !(data.title == skipPost) ;
-  })).sort(
-    (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-  ).slice(0, postLimit);
+const posts = await getPosts( { 'collection': "Blog", 'postLimit': postLimit, 'skipPost': skipPost });
 ---
 <section class="container mx-auto max-w-screen-lg px-7 py-10 mb-10">
     {
