--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -6,11 +6,10 @@ import AuthorInfo from "../../components/blog/AuthorInfo.astro";
 import LatestPosts from "../../components/blog/LatestPosts.astro";
 import PublishDate from "../../components/blog/PublishDate.astro";
 import Tag from "../../components/general/Tag.astro";
-
-import { getCollection, getEntry } from "astro:content";
+import { getPosts } from "../../cms/cmsBase";
 
 export async function getStaticPaths() {
-  const blogEntries = await getCollection("blog");
+  const blogEntries = await getPosts( { 'collection': "Blog" });
 
   return blogEntries.map((entry) => ({
     params: { slug: entry.slug },
@@ -18,10 +17,7 @@ export async function getStaticPaths() {
   }));
 }
 const { entry } = Astro.props;
-entry.data.type = "blog";
-
-const { Content } = await entry.render();
-const author = await getEntry(entry.data.author);
+entry.type = "blog";
 
 ---
 
@@ -30,14 +26,14 @@ const author = await getEntry(entry.data.author);
     <div class="mx-auto
       prose lg:prose-xl prose-headings:font-bold prose-headings:text-pacamara-dark prose-headings:mb-3
       ">
-        <h1 class="transition-all duration-300 dark:text-white">{entry.data.title}</h1>
+        <h1 class="transition-all duration-300 dark:text-white">{entry.title}</h1>
         <p class="flex flex-row flex-wrap gap-5 items-center font-pacamara-space mx-auto max-w-screen-lg mb-7">
-            <Tag tag={entry.data.tag} />
-            <PublishDate date={entry.data.pubDate} />
+            <Tag tag={entry.tag} />
+            <PublishDate date={entry.pubDate} />
         </p>
     </div>
-    {entry.data.image && 
-      <Image src={entry.data.image} width="1200" height="250" alt="" loading="eager" decoding="sync" class="block relative mx-auto mt-10 object-cover h-72 md:h-[350px] image-shine rounded-[15px]" loading="eager" />
+    {entry.image && 
+      <Image src={entry.image} width="1200" height="250" alt="" loading="eager" decoding="sync" class="block relative mx-auto mt-10 object-cover h-72 md:h-[350px] image-shine rounded-[15px]" loading="eager" />
     }
     <div class="
         lg:px-0 pt-10 mb-5 mx-auto
@@ -52,15 +48,14 @@ const author = await getEntry(entry.data.author);
         prose-img:rounded-lg prose-img:mx-auto 
         prose-code:transition-all prose-code:duration-300 prose-code:text-pacamara-dark
         dark:prose-headings:text-pacamara-accent dark:prose-p:text-white/70 dark:prose-a:text-white dark:hover:prose-a:text-pacamara-accent dark:prose-strong:text-white dark:prose-li:text-white dark:prose-code:text-white dark:prose-td:text-white/70 dark:prose-hr:border-pacamara-accent/30 dark:prose-tr:border-pacamara-accent/30 dark:prose-thead:border-pacamara-accent/30
-      ">
-      <Content />
+      " set:html={entry.content}>
   </div>
 </article>
 
-<AuthorInfo authorData={author} />
+<AuthorInfo authorId={entry.authorId} />
 
 <div class="pt-10 mb-7 bg-gradient-to-b from-pacamara-dark/[0.05] to-pacamara-dark[0 dark:bg-gradient-to-b dark:from-bg-black/50 to-bg-black/0">
   <h2 class="container mx-auto max-w-screen-lg px-7 text-xl text-pacamara-secondary font-bold mb-7">See other articles:</h2>
-  <LatestPosts postLimit=2 skipPost={entry.data.title} />
+  <LatestPosts postLimit=2 skipPost={entry.id} />
 </div>
 </Base>
